--- a/app/src/main/res/layout/celda_item.xml
+++ b/app/src/main/res/layout/celda_item.xml
@@ -23,6 +23,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginStart="5dp"
+            android:layout_marginVertical="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +37,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="30dp"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textColor="@color/black"
             tools:text="Prueba"
             />
