--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_gray">#DFD0CE</color>
     <color name="light_blue">#6288FA</color>
     <color name="green">#4CAF50</color>
+    <color name="gray">#7E7A79</color>
 </resources>
