--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -42,11 +42,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragmentSearchList_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragmentSearchList_textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="8dp"
         />
     <ProgressBar
         android:id="@+id/fragmentSearchList_ProgressBar"
